test/log/logic/vor_vv_u16_m.txt
vor_vv_u16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vor_vv_u16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vor_vv_u16_m.c:30:6: warning: no previous prototype for 'vor_vv_u16_m_golden' [-Wmissing-prototypes]
   30 | void vor_vv_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~
vor_vv_u16_m.c: In function 'vor_vv_u16_m_golden':
vor_vv_u16_m.c:32:25: error: 'TODO' undeclared (first use in this function)
   32 |         exp_result[i] = TODO;
      |                         ^~~~
vor_vv_u16_m.c:32:25: note: each undeclared identifier is reported only once for each function it appears in
vor_vv_u16_m.c:30:36: warning: unused parameter 'mask' [-Wunused-parameter]
   30 | void vor_vv_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |                          ~~~~~~~~~~^~~~
vor_vv_u16_m.c:30:51: warning: unused parameter 'maskoff' [-Wunused-parameter]
   30 | void vor_vv_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |                                         ~~~~~~~~~~^~~~~~~
vor_vv_u16_m.c:30:69: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vor_vv_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |                                                           ~~~~~~~~~~^
vor_vv_u16_m.c:30:81: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vor_vv_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |                                                                       ~~~~~~~~~~^
vor_vv_u16_m.c: In function 'main':
vor_vv_u16_m.c:52:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   52 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vor_vv_u16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vor_vv_u16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vor_vv_u16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vor_vv_u16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed